# epog

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
epog/algorithm/: __init__.py
epog/algorithm/baseline/: LLM.py  LLM_Explore.py  LLM_Planner.py  __init__.py  base.py
epog/algorithm/efs/: EFS.py  __init__.py
epog/algorithm/epog/: EPoG.py  __init__.py  fake_simulator.py  planner_dynamic.py  problem_dynamic.py
epog/algorithm/llm_prompt/: __init__.py  action_replaner.py  object_receptacle_location.py  object_room_location.py
epog/data_gen/: task_list.py  task_proc_scene.py
epog/envs/: graph.py  navigation.py  proc_env.py  proc_scene.py
epog/envs/assets/: asset2info.json
epog/evaluation/: eval.py  post_summary.py
epog/utils/: gpt_helper.py
pog/algorithm/: annealing.py  genetic.py  gradient.py  params.py  structure.py  utils.py
pog/graph/: chromosome.py  edge.py  environment.py  graph.py  node.py  params.py  shape.py  utils.py
pog/graph/robot_description/: .gitignore
pog/graph/shapes/: __init__.py  complex_storage.py  cone.py  drawer.py  open_shelf.py  wardrobe.py
pog/planning/: action.py  ged.py  params.py  planner.py  problem.py  searchNode.py  searchProblem.py  utils.py
